Modify post Dockerfile