@@ -43,6 +43,34 @@ RUN pwd
 设置全局环境变量，k=v格式：
 - https://docs.docker.com/engine/reference/builder/#env
 
+**ENV变量会在容器运行的时候依然存在**，所以和在linux shell里设置环境变量没啥区别。但是ARG变量只在build的时候存在。
+
+**ENV设置的变量可以在`docker run`运行容器的时候使用`--env`或`-e`覆盖掉。**
+
+If an environment variable is only needed during build, and not in the final image, consider setting a value for a single command instead:
+```
+RUN DEBIAN_FRONTEND=noninteractive apt-get update && apt-get install -y ...
+```
+Or using ARG, which is **not persisted in the final image**:
+```
+ARG DEBIAN_FRONTEND=noninteractive
+RUN apt-get update && apt-get install -y ...
+```
+
+## ARG
+`docker build`可以使用`--build-arg <varname>=<value>`覆盖掉ARG变量，相当于build时候的一个占位符。
+
+```
+FROM busybox
+USER ${user:-some_user}
+ARG user
+USER $user
+# ...
+```
+A user builds this file by calling:
+```
+docker build --build-arg user=what_user .
+```
 ## EXPOSE
 **仅具有标记作用**：告知容器使用者，开发者打算用哪个端口发布。但并没有发布作用，真要发布还得使用`-p`参数：
 - https://docs.docker.com/engine/reference/builder/#expose
@@ -64,18 +92,73 @@ ADD和COPY有啥区别？ADD比COPY功能强大，毕竟ADD能解压压缩包：
 官方建议，在用不到ADD的额外功能的时候，使用COPY：
 - https://docs.docker.com/develop/develop-images/dockerfile_best-practices/#add-or-copy
 
-# RUN（shell form） vs. CMD（exec form） vs. ENTRYPOINT（exec form）
-都是执行命令，但意义不同。且都有两种格式：
-- shell格式：`RUN <command>` (**shell form, the command is run in a shell, which by default is `/bin/sh -c` on Linux**)
-- exec格式：`RUN ["executable", "param1", "param2"]` (exec form)
+# RUN
+**RUN会执行指令，并给镜像增加一层layer**：The RUN instruction will execute any commands in a new layer on top of the current image and commit the results. The resulting committed image will be used for the next step in the Dockerfile.
 
-## shell格式
-`RUN <command>`
+# ENTRYPOINT & CMD [exec form]
+ENTRYPOINT和CMD指定了：**启动一个容器的时候，运行什么指令**。实际启动的指令，是 **entrypoint + cmd**。
 
-**使用shell格式，所有的指令都会当做一个字符串，交给`sh -c`执行。**
+1. 如果entrypoint已经是一个完整的指令，那么cmd可以为空；
+2. 反之亦然；
+2. **但是如果entrypoint和cmd都为空，就没有可执行命令了，这是不允许的**；
+3. **docker有个默认的entrypoint（`/bin/sh -c`），但没有默认的cmd**，显然这是一条不完整的指令，所以仅有默认的entrypoint也是不行的；
 
+**因此Dockerfile里至少指定ENTRYPOINT和CMD中的一个**。
 
-### `sh -c`
+既然二者都可以定义为一条完整的命令，怎么选择用哪一个？主要记住一点：**CMD是比较好覆盖的**，所以：
+- 如果是可执行镜像，用ENTRYPOINT；
+- CMD应该用作ENTRYPOINT的默认参数，**在运行容器的时候，Dockerfile里指定的默认CMD很容易被覆盖掉**；
+
+**`docker run`命令可以指定容器的cmd和args：`docker run [OPTIONS] IMAGE [COMMAND] [ARG...]`，`[COMMAND] [ARG...]`和默认的entrypoint一起，组成执行命令**。
+- https://docs.docker.com/engine/reference/commandline/run/
+
+比如，Ubuntu镜像的Dockerfile没指定ENTRYPOINT，指定了`CMD ["bash"]`。那么：
+1. 如果运行ubuntu容器的指令带有command和args：
+    ```
+    > docker run -it ubuntu ls -lhb /
+    total 48K
+    lrwxrwxrwx   1 root root    7 Sep 21  2021 bin -> usr/bin
+    drwxr-xr-x   2 root root 4.0K Apr 15  2020 boot
+    drwxr-xr-x   5 root root  360 Sep 15 18:27 dev
+    drwxr-xr-x   1 root root 4.0K Sep 15 18:27 etc
+    drwxr-xr-x   2 root root 4.0K Apr 15  2020 home
+    lrwxrwxrwx   1 root root    7 Sep 21  2021 lib -> usr/lib
+    lrwxrwxrwx   1 root root    9 Sep 21  2021 lib32 -> usr/lib32
+    lrwxrwxrwx   1 root root    9 Sep 21  2021 lib64 -> usr/lib64
+    lrwxrwxrwx   1 root root   10 Sep 21  2021 libx32 -> usr/libx32
+    drwxr-xr-x   2 root root 4.0K Sep 21  2021 media
+    drwxr-xr-x   2 root root 4.0K Sep 21  2021 mnt
+    drwxr-xr-x   2 root root 4.0K Sep 21  2021 opt
+    dr-xr-xr-x 222 root root    0 Sep 15 18:27 proc
+    drwx------   2 root root 4.0K Sep 21  2021 root
+    drwxr-xr-x   5 root root 4.0K Sep 21  2021 run
+    lrwxrwxrwx   1 root root    8 Sep 21  2021 sbin -> usr/sbin
+    drwxr-xr-x   2 root root 4.0K Sep 21  2021 srv
+    dr-xr-xr-x  11 root root    0 Sep 15 18:27 sys
+    drwxrwxrwt   2 root root 4.0K Sep 21  2021 tmp
+    drwxr-xr-x  13 root root 4.0K Sep 21  2021 usr
+    drwxr-xr-x  11 root root 4.0K Sep 21  2021 var
+    ```
+    相当于手动指定了了一个CMD，`ls -lhb /`，命令为`ls`，两个参数为`-lhb /`。此时Dockerfile里的CMD就会被忽略，最终实际执行的是`/bin/sh -c "ls -lhb /"`。
+1. 如果CMD只有command，没有args，比如`docker run -it ubuntu bash`，bash是command，那么实际执行命令为`/bin/sh -c "bash"`。
+2. 如果什么都没指定，就会用Dockerfile指定的CMD。所以`docker run -it ubuntu`实际执行的命令还是`/bin/sh -c "bash"`**。
+
+既然CMD可以被覆盖，**entrypoint也可以被覆盖，只不过没有覆盖CMD那么方便：通过docker run的`--entrypoint`参数**，overwrite the default ENTRYPOINT of the image：
+- https://stackoverflow.com/a/21564990/7676237
+
+比如：
+```
+docker run --entrypoint /bin/zsh xxx:1.0.0 -c tree
+```
+实际执行的是`/bin/zsh -c tree`，而不是`/bin/sh -c "-c tree"`。
+
+> 注意最后的命令一定要使用`-c tree`，才行，`/bin/zsh tree`是直接把tree作为文件读取，而不是把他们当做指令解释。**这也是为什么docker默认的ENTRYPOINT是`/bin/sh -c`，而非`/bin/sh`**。
+>
+> -c     Take the first argument as a command to execute, rather than reading commands from a script or standard input.  If any further arguments are given, the first one is assigned to $0, rather than being used as a positional parameter.
+
+- 官方也有类似的示例：https://docs.docker.com/engine/reference/run/#entrypoint-default-command-to-execute-at-runtime
+
+## `/bin/sh -c`
 sh是什么？在Debian里，它是dash：
 ```
 ~ ll `which sh`
@@ -85,8 +168,8 @@ dash是POSIX + Berkeley拓展。
 
 `-c`是什么？**是把后面的字符串（inline script）当命令去解释，并能手动指定inline script的参数`$0`/`$1`**：
 ```
-           -c               Read commands from the command_string operand instead of from the standard input.  Special parameter 0 will be set from the command_name operand and the positional parameters
-                            ($1, $2, etc.)  set from the remaining argument operands.
+-c               Read commands from the command_string operand instead of from the standard input.  Special parameter 0 will be set from the command_name operand and the positional parameters
+                ($1, $2, etc.)  set from the remaining argument operands.
 ```
 
 inline script：
@@ -111,93 +194,186 @@ hello.txt: 1: cannot open : No such file
 
 - https://unix.stackexchange.com/a/152396/283488
 
-## exec格式
-`RUN ["executable", "param1", "param2"]`
+## exec form vs. shell form
+ENTRYPOINT/CMD/RUN都有两种格式：
+- exec格式：`ENTRYPOINT ["executable", "param1", "param2"]`
+- shell格式：`ENTRYPOINT <command> <param1> <param2>`，**shell form, the command is run in a shell, which by default is `/bin/sh -c` on Linux**
 
-> **exec格式传的是一个json array**，所以必须用双引号而非单引号。
+### shell格式
+`ENTRYPOINT <command> <param1> <param2>`
 
-exec格式直接执行executable，而且不用解析字符串了。它最大的作用就是 **Unlike the shell form, the exec form does not invoke a command shell**，所以：
-- **没法解释shell变量**，比如`$HOME`（但是能解释`ENV`定义的变量，比如`$XXX`）；
-- **没法使用shell相关的功能**：sub commands, piping output, chaining commands, I/O redirection, and more
-- **不再是sh fork出的子进程**；
+**使用shell格式，所有的指令都会当做一个字符串，交给`sh -c`执行**，ENTRYPOINT使用shell格式最大的影响是：**The shell form prevents any `CMD` or `docker run` command line arguments from being used，用了shell格式就不能再使用任何形式的CMD了，统统无效**。
 
-最后一点比较重要。**对于ENTRYPOINT来说，如果使用shell格式，那么PID 1将会是`/bin/sh`，而非executable。从`docker stop`命令收到SIGTERM的也是shell，但是由于shell不会转发unix信号，所以容器不会停止，直到10s后docker发送SIGKILL强行shell**：
+**对于ENTRYPOINT来说，如果使用shell格式，那么PID 1将会是`/bin/sh`，而非executable。从`docker stop`命令收到SIGTERM的也是shell，但是由于shell不会转发unix信号，所以容器不会停止，直到10s后docker发送SIGKILL强行shell**：
 - https://docs.docker.com/engine/reference/builder/#entrypoint
 
 > This means that the executable will not be the container’s PID 1 - and will not receive Unix signals - so your executable will not receive a SIGTERM from docker stop <container>.
 
-## 格式选择
-所以：
-- RUN：选shell form；
-- ENTRYPOINT和CMD选exec form；
+但是上了rancher之后，docker stop好像用处就不大了？
 
-## RUN
-**RUN会执行指令，并给镜像增加一层layer**：The RUN instruction will execute any commands in a new layer on top of the current image and commit the results. The resulting committed image will be used for the next step in the Dockerfile.
+### exec格式
+`ENTRYPOINT ["executable", "param1", "param2"]`
 
-## CMD vs. ENTRYPOINT
-对于一个executable container，**entrypoint + cmd构成了容器的执行命令**。
+> **exec格式传的是一个json array**，所以必须用双引号而非单引号。
 
-**docker有个默认的entrypoint（`/bin/sh -c`），但没有默认的cmd**，可以在Dockerfile里通过CMD指定。
+exec格式直接执行executable，而且不用解析字符串了。**只有使用exec form，才能在后面拼接CMD**。
 
-**`docker run`命令可以指定容器的cmd和args**：`docker run [OPTIONS] IMAGE [COMMAND] [ARG...]`，和默认的entrypoint一起，组成执行命令。
-- https://docs.docker.com/engine/reference/commandline/run/
+另外Unlike the shell form, the exec form does not invoke a command shell，所以：
+- **没法解释shell变量**，比如`$HOME`（~~但是能解释`ENV`定义的变量，比如`$XXX`~~，也不能解释ENV变量）；
+- **没法使用shell相关的功能**：sub commands, piping output, chaining commands, I/O redirection, and more
+- **不再是sh fork出的子进程**；
 
-比如，**同时指定了command和args**：
-```
-> docker run -it ubuntu ls -lhb /
-total 48K
-lrwxrwxrwx   1 root root    7 Sep 21  2021 bin -> usr/bin
-drwxr-xr-x   2 root root 4.0K Apr 15  2020 boot
-drwxr-xr-x   5 root root  360 Sep 15 18:27 dev
-drwxr-xr-x   1 root root 4.0K Sep 15 18:27 etc
-drwxr-xr-x   2 root root 4.0K Apr 15  2020 home
-lrwxrwxrwx   1 root root    7 Sep 21  2021 lib -> usr/lib
-lrwxrwxrwx   1 root root    9 Sep 21  2021 lib32 -> usr/lib32
-lrwxrwxrwx   1 root root    9 Sep 21  2021 lib64 -> usr/lib64
-lrwxrwxrwx   1 root root   10 Sep 21  2021 libx32 -> usr/libx32
-drwxr-xr-x   2 root root 4.0K Sep 21  2021 media
-drwxr-xr-x   2 root root 4.0K Sep 21  2021 mnt
-drwxr-xr-x   2 root root 4.0K Sep 21  2021 opt
-dr-xr-xr-x 222 root root    0 Sep 15 18:27 proc
-drwx------   2 root root 4.0K Sep 21  2021 root
-drwxr-xr-x   5 root root 4.0K Sep 21  2021 run
-lrwxrwxrwx   1 root root    8 Sep 21  2021 sbin -> usr/sbin
-drwxr-xr-x   2 root root 4.0K Sep 21  2021 srv
-dr-xr-xr-x  11 root root    0 Sep 15 18:27 sys
-drwxrwxrwt   2 root root 4.0K Sep 21  2021 tmp
-drwxr-xr-x  13 root root 4.0K Sep 21  2021 usr
-drwxr-xr-x  11 root root 4.0K Sep 21  2021 var
-```
-实际执行的是`/bin/sh -c "ls -lhb /"`
+pid=1的就是命令本身，而不是`/bin/sh`。
 
-**只指定了command**，比如`docker run -it ubuntu bash`，bash是command，实际执行命令为`/bin/sh -c bash`。
+> CMD还有第三种格式：`CMD ["param1", "param2"]` (as default parameters to ENTRYPOINT)，直接作为ENTRYPOINT的参数。
 
-**在run的时候没指定command**，如果Dockerfile指定了CMD，就会用CMD指定的command。比如ubuntu镜像设置了`CMD ["bash"]`，所以`docker run -it ubuntu`实际执行的命令还是`/bin/sh -c bash`。
-
-既然command可以设置默认值CMD，也可以自己指定，**那么entrypoint也可以自己指定：通过docker run的`--entrypoint`参数**，overwrite the default ENTRYPOINT of the image：
-
-- https://stackoverflow.com/a/21564990/7676237
-
-比如：
-```
-docker run --entrypoint /bin/zsh xxx:1.0.0 -c tree
-```
-注意最后的命令一定要使用`-c tree`，`/bin/zsh -c tree`才行，`/bin/zsh tree`是直接把tree作为文件读取
-> -c     Take the first argument as a command to execute, rather than reading commands from a script or standard input.  If any further arguments are given, the first one is assigned to $0, rather than being used as a positional parameter.
-
-- 在官方示例也能看到这一点：https://docs.docker.com/engine/reference/run/#entrypoint-default-command-to-execute-at-runtime
-
-entrypoint + cmd的组合示例（**ENTRYPOINT和CMD都选用exec形式**）：
+### 终极指南
+entrypoint + cmd的组合示例（**ENTRYPOINT和CMD都选用exec形式**）文档：
 - https://docs.docker.com/engine/reference/builder/#understand-how-cmd-and-entrypoint-interact
 
-> CMD还有第三种格式：`CMD ["param1","param2"]` (as default parameters to ENTRYPOINT)，直接作为ENTRYPOINT的参数。
+其中很明确表明：**ENTRYPOINT采用shell格式的时候，就没有CMD的事儿了**。
+
+> 另外，如果当前image设置了ENTRYPOINT，base image的CMD会被清空。
+
+### 格式选择
+所以：
+- RUN：选shell form；
+- ENTRYPOINT和CMD：
+    + 优先选exec form；
+    + 如果需要使用变量，使用shell form；
+
+## 一个示例：ENTRYPOINT/CMD
+示例来自一次失败的Dockerfile，但或许是解释ENTRYPOINT和CMD更好的方式。
+
+一开始以为`JAVA_OPTS`可以在执行的时候起到作用，所以写了下面的Dockerfile：
+```
+ENV JAVA_OPTS="-Xms2048m -Xmx8192m verbose:gc -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+PrintAdaptiveSizePolicy -XX:+PrintTenuringDistribution -Xloggc:logs/gc.log.%t"
+
+ENTRYPOINT ["java", "org.springframework.boot.loader.JarLauncher"]
+```
+**但实际上，`JAVA_OPTS`并非标准的java environment variable，所以设置了之后什么用也没有**。相当于仅仅执行了`java org.springframework.boot.loader.JarLauncher`。
+
+对于这个镜像，如果想增加debug参数，在rancher覆盖`JAVA_OPTS`变量并没有任何作用，因为这个变量并没有被用到。
+
+### override ENTRYPOINT
+如果真的想对这个镜像debug，执行的时候可以覆盖entrypoint，以达到debug的目的：
+> java -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=9327 org.springframework.boot.loader.JarLauncher
+
+完全覆盖Dockerfile里的命令，另起炉灶。
+
+## exec form不替换变量
+既然JAVA_OPTS变量没什么作用，如果想使用这些jvm变量，就要把变量放到java指令后面。于是修改Dockerfile，把参数放进去：
+```
+ENV JVM_ARGS="-Xms2048m -Xmx8192m -verbose:gc -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+PrintAdaptiveSizePolicy -XX:+PrintTenuringDistribution -Xloggc:logs/gc.log.%t"
+
+ENTRYPOINT ["java", "$JVM_ARGS", "org.springframework.boot.loader.JarLauncher"]
+```
+这样打出来的镜像启动直接报错：
+```
+错误: 找不到或无法加载主类 $JVM_ARGS
+```
+说明`$JVM_ARGS`根本没被替换为真正的jvm参数，而是把它当做了字面量：**ENTRYPOINT不替换变量！只有shell会替换！**
+
+### shell form会替换变量
+把上面的的exec form换成shell form就行了：
+```
+ENV JVM_ARGS="-Xms2048m -Xmx8192m -verbose:gc -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+PrintAdaptiveSizePolicy -XX:+PrintTenuringDistribution -Xloggc:logs/gc.log.%t"
+
+ENTRYPOINT java $JVM_ARGS org.springframework.boot.loader.JarLauncher
+```
+
+> 把ENTRYPOINT换成CMD也是可以的。
+
+想debug的时候，rancher设置JVM_ARGS变量就行了：
+```
+JVM_ARGS = -Xms2048m -Xmx8192m -verbose:gc -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+PrintAdaptiveSizePolicy -XX:+PrintTenuringDistribution -Xloggc:logs/gc.log.%t -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=9327
+```
+
+因为用了shell form，所以容器里java的pid就不是1了：
+```
+➜  /app jps -m
+7 JarLauncher
+93 Jps -m
+```
+pid=7，且参数确实作为VM Flags了：
+```
+➜  /app jinfo 7     
+Attaching to process ID 7, please wait...
+Debugger attached successfully.
+Server compiler detected.
+JVM version is 25.202-b08
+Java System Properties:
+
+java.runtime.name = Java(TM) SE Runtime Environment
+java.vm.version = 25.202-b08
+sun.boot.library.path = /usr/java/jdk1.8.0_202/jre/lib/amd64
+java.vendor.url = http://java.oracle.com/
+java.vm.vendor = Oracle Corporation
+path.separator = :
+file.encoding.pkg = sun.io
+java.vm.name = Java HotSpot(TM) 64-Bit Server VM
+sun.os.patch.level = unknown
+sun.java.launcher = SUN_STANDARD
+user.country = CN
+user.dir = /app
+java.vm.specification.name = Java Virtual Machine Specification
+PID = 7
+java.runtime.version = 1.8.0_202-b08
+java.awt.graphicsenv = sun.awt.X11GraphicsEnvironment
+os.arch = amd64
+java.endorsed.dirs = /usr/java/jdk1.8.0_202/jre/lib/endorsed
+CONSOLE_LOG_CHARSET = UTF-8
+line.separator = 
+
+java.io.tmpdir = /tmp
+java.vm.specification.vendor = Oracle Corporation
+os.name = Linux
+FILE_LOG_CHARSET = UTF-8
+sun.jnu.encoding = UTF-8
+java.library.path = /usr/java/packages/lib/amd64:/usr/lib64:/lib64:/lib:/usr/lib
+spring.beaninfo.ignore = true
+java.specification.name = Java Platform API Specification
+java.class.version = 52.0
+sun.management.compiler = HotSpot 64-Bit Tiered Compilers
+os.version = 5.4.139-1.el8.elrepo.x86_64
+user.home = /root
+user.timezone = Asia/Shanghai
+java.awt.printerjob = sun.print.PSPrinterJob
+file.encoding = UTF-8
+java.specification.version = 1.8
+user.name = root
+java.class.path = .
+java.vm.specification.version = 1.8
+sun.arch.data.model = 64
+sun.java.command = org.springframework.boot.loader.JarLauncher
+java.home = /usr/java/jdk1.8.0_202/jre
+user.language = zh
+java.specification.vendor = Oracle Corporation
+awt.toolkit = sun.awt.X11.XToolkit
+java.vm.info = mixed mode
+java.version = 1.8.0_202
+java.ext.dirs = /usr/java/jdk1.8.0_202/jre/lib/ext:/usr/java/packages/lib/ext
+sun.boot.class.path = /usr/java/jdk1.8.0_202/jre/lib/resources.jar:/usr/java/jdk1.8.0_202/jre/lib/rt.jar:/usr/java/jdk1.8.0_202/jre/lib/sunrsasign.jar:/usr/java/jdk1.8.0_202/jre/lib/jsse.jar:/usr/java/jdk1.8.0_202/jre/lib/jce.jar:/usr/java/jdk1.8.0_202/jre/lib/charsets.jar:/usr/java/jdk1.8.0_202/jre/lib/jfr.jar:/usr/java/jdk1.8.0_202/jre/classes
+java.awt.headless = true
+java.vendor = Oracle Corporation
+file.separator = /
+java.vendor.url.bug = http://bugreport.sun.com/bugreport/
+sun.io.unicode.encoding = UnicodeLittle
+sun.cpu.endian = little
+sun.cpu.isalist = 
+
+VM Flags:
+Non-default VM flags: -XX:CICompilerCount=3 -XX:InitialHeapSize=2147483648 -XX:MaxHeapSize=8589934592 -XX:MaxNewSize=2863136768 -XX:MinHeapDeltaBytes=524288 -XX:NewSize=715653120 -XX:OldSize=1431830528 -XX:+PrintAdaptiveSizePolicy -XX:+PrintGC -XX:+PrintGCDateStamps -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -XX:+PrintTenuringDistribution -XX:+UseCompressedClassPointers -XX:+UseCompressedOops -XX:+UseFastUnorderedTimeStamps -XX:+UseParallelGC 
+Command line:  -Xms2048m -Xmx8192m -verbose:gc -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+PrintAdaptiveSizePolicy -XX:+PrintTenuringDistribution -Xloggc:logs/gc.log.%t -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=9327
+```
+`docker stop`就不能SIGKILL到app了。但是在rancher上用起来也没啥区别，没用docker container stop？
 
 # `docker run` vs. `docker exec`
 二者格式类似：
 - `docker run [OPTIONS] IMAGE [COMMAND] [ARG...]`
 - `docker exec [OPTIONS] CONTAINER COMMAND [ARG...]`
 
-run的对象是镜像IMAGE，exec的对象是容器CONTAINER，而且容器必须已经启动了才能执行exec：The command started using docker exec only runs while the container’s primary process (PID 1) is running, and it is not restarted if the container is restarted.
+**run的对象是镜像IMAGE，exec的对象是容器CONTAINER，而且容器必须已经启动了才能执行exec**：The command started using docker exec only runs while the container's primary process (PID 1) is running, and it is not restarted if the container is restarted.
 
 run和entrypoint组合使用，而且可以不指定command，因为有了CMD作为默认值。但是exec必须指定command，而且应该是一个executable，**它不和entrypoint配合使用，没有entrypoint的概念**。
 
@@ -386,3 +562,4 @@ $ docker push <private docker hub>/puppylpg/puppylpg-base:latest
 26M     /usr/java/jdk1.8.0_202/jre/lib/ext
 26M     /usr/bin
 ```
+
